--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
           <div class="logo">Rikky Pattela</div>
           <ul class="menu">
-            <li><a href="Home-page.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
