--- a/Projects.html
+++ b/Projects.html
@@ -34,7 +34,7 @@
                     <li>CSS Grid for aligning sections</li>
                     <li>Responsive design using media queries</li>
                 </ul>
-                <a href="https://github.com/your-repo/resume-website" class="view-project-btn" target="_blank">View Project</a>
+                <a href="https://rikky953.github.io/resume/" class="view-project-btn" target="_blank">View Project</a>
             </div>
 
             <!-- Project Card: Blog Page -->
